# Group4

./: CMakeLists.txt  LICENSE
.github/workflows/: ciUnitTest.yml
Header/: APIHandler.h  Authenticator.h  FileOperator.h  HttpListener.h  MainManager.h  OperateData.h  RequestHandler.h  RequestParser.h  ResponseEncoder.h  ResponseHandler.h  ResponseParser.h  SocketProcess.h  Upload.h
docker/: Dockerfile  unitTest.sh
src/Header/: APIHandler.h  Authenticator.h  DownloadStream.h  ErrorHandle.h  FileOperator.h  HttpListener.h  LogHandle.h  MainManager.h  OperateData.h  RequestHandler.h  RequestParser.h  ResponseEncoder.h  ResponseHandler.h  ResponseParser.h  SocketProcess.h  StreamConnector.h  Upload.h  UploadStream.h
src/Implement/: Authenticator.cpp  DownloadStream.cpp  FileOperator.cpp  HttpListener.cpp  LogHandle.cpp  MainManager.cpp  OperateData.cpp  RequestHandler.cpp  RequestParser.cpp  ResponseEncoder.cpp  ResponseHandler.cpp  ResponseParser.cpp  UnitTestAuthenticator.cpp  UnitTestDownloadStream.cpp  UnitTestFileOperator.cpp  UnitTestHttpListener.cpp  UnitTestLogHandle.cpp  UnitTestMainManager.cpp  UnitTestOperateData.cpp  UnitTestRequestHandler.cpp  UnitTestRequestParser.cpp  UnitTestResponseEncoder.cpp  UnitTestResponseHandler.cpp  UnitTestUploadStream.cpp  UploadStream.cpp
